--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+*{
+	margin:0;
+	padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .form_address{
+    margin-top:200px;
+	box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .form__selects{
+    padding: 12px 20px;
+    font-size: 16px;
+    border-color:rgba(211, 211, 211, 0.719);
+	border-color: rgba(211, 211, 211, 0.719);
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+  
+.form__addClient{
+	margin-top: 100px;
+	border: rgba(211, 211, 211, 0.719);
+	max-width: 400px;
+	height: 450px;
+	border-radius: 15px;
+	box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+	padding: 80px 20px 0 20px;
+	font-size: 14px;
+	font-weight: bold;
+}
+
+.card{
+	width: 300px !important;
+	margin-bottom: 50px;
+	box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+	border: rgba(211, 211, 211, 0.719);
+	font-size: 12px;
+	font-weight: bolder;
 }
